--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-soft-colors",
     "displayName": "Soft Colors",
     "description": "Soft Colors Theme was created with care for your eyes. I tried to save a low contrast balance with the least loss of code perception.",
-    "version": "0.0.8",
+    "version": "0.0.9",
     "publisher": "victorlitvinenko",
     "engines": {
         "vscode": "^1.42.0"
@@ -31,6 +31,11 @@
                 "label": "Soft Colors",
                 "uiTheme": "vs-dark",
                 "path": "./themes/Soft Colors-color-theme.json"
+            },
+            {
+                "label": "Soft Colors (No Italics)",
+                "uiTheme": "vs-dark",
+                "path": "./themes/Soft Colors-color-theme-no-italics.json"
             }
         ]
     },
